Minor GUI fix more width for P elements so lines won't break on "Insert Book" HTML

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -391,7 +391,7 @@ img:hover {
 
 .insert-line p{
   font-size: 24px;
-  width: 200px;
+  width: 210px;
 }
 
 .insert-line input{
